# Shmup

./: .gitignore  .gitmodules  README
engine/glfw/: CMakeLists.txt  main.c  main.h  native.c
engine/src/: event.c  player.c  preproc.c  renderer.c  renderer.h  renderer_fixed.c  renderer_progr.c
